master  >  Setup the default font & font size

--- a/app/styles/conf/layout.less
+++ b/app/styles/conf/layout.less
@@ -34,7 +34,7 @@
 	// --------------------------------
 
 	@font-size-default:   62.5%;
-	@font-family-default : "Arial";
+	@font-family-default : "Arial", serif;
 
 
 
@@ -77,4 +77,12 @@
  * Classes
  * ================================================================
 */
+
+html {
+	font-size: @font-size-default;
+	font-family:@font-family-default;
+}
+
+
+
 
