master  >  Create the pie chart for total commits by users

--- a/app/styles/fragments/charts.fragment.less
+++ b/app/styles/fragments/charts.fragment.less
@@ -1,4 +1,13 @@
 .chart-container {
-	.padding(20px);
 
+	chart-legend {
+		.font-size(18px);
+	}
+
+
+}
+
+#chart-commit-by-user {
+	.padding-top(50px);
+	.max-width(30vw);
 }
