master  >  Import Bootstrap & commitList Style sheet

--- a/app/styles/style.less
+++ b/app/styles/style.less
@@ -23,7 +23,8 @@
 */
 
 
-	// @import (reference) "remixings/remixins.less";
+	@import (reference) "remixings/remixins.less";
+	@import (css) "../../bower_components/bootstrap/dist/css/bootstrap.min.css";
 
 
 	// ... add other libraries here
@@ -65,6 +66,7 @@
 	@import "fragments/header.fragment.less";
 
 	@import "fragments/charts.fragment.less";
+	@import "fragments/commitList.fragment.less";
 
 
 	// ... add others fragments  here
