--- a/app/styles/fragments/charts.fragment.less
+++ b/app/styles/fragments/charts.fragment.less
@@ -7,7 +7,13 @@
 
 }
 
-#chart-commit-by-user {
+#chart-project-by-date {
+	width:75%;
+	margin:auto;
+}
+
+#chart-commit-by-user, #chart-commit-by-project {
+	height:38vh;
+	max-height:38vh;
 	.padding-top(50px);
-	.max-width(30vw);
 }
