--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,6 +6,7 @@
 
 
         <div class="collapse navbar-collapse">
+            <button type="button" class="btn btn-warning navbar-btn" ng-click="refreshCharts();">Refresh</button>
             <button type="button" class="btn btn-primary navbar-btn" ng-click="full();">Full Screen</button>
             <button type="button" class="btn btn-info navbar-btn" ng-click="toggleChart(0);">Toggle Main Chart</button>
             <button type="button" class="btn btn-info navbar-btn" ng-click="toggleChart(1);">Toggle 2nd Chart</button>
